<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Waar Beta</string>
    <string name="app_version">0.5</string>
    <string name="description">Beta - Application du jeu en ligne</string>
    <string name="Apptheme">Waar jeu en ligne Web medieval online multiplayer petit multijoueur</string>
    <string name="EnvoyerButtonTxt">OK</string>
    <string name="ServiceButtonText">Test Service</string>
    <string name="btnHTTPGet">Get Page Web</string>
    <string name="TextNotification">Test Notification</string>
    <string name="initUserParams">Init User  Params</string>
    <string name="labelEmail">Pseudo</string>
    <string name="labelMdP">Mot de passe</string>
    <string name="txtOK">OK</string>
    <string name="txtAnnuler">Annuler</string>
    <string name="test">Test</string>
    <string name="Log">Log</string>
    <string name="txt_ActivationNotifications">Activer les notifications</string>
    <string name="txt_Activation_Jbd">Notifications Journal</string>
    <string name="txt_Activation_Ally">Notifications Alliances</string>
    <string name="txt_Activation_MP">Notifications Messages Privés</string>
    <string name="txt_Activation_News">Notifications News</string>
    <string name="lancer_waar">Lancer Waar !</string>
    <string name="enregistrer">Enregistrer</string>
</resources>